--- a/10-Regression.qmd
+++ b/10-Regression.qmd
@@ -91,8 +91,7 @@ ggplot(marketing, aes(x = spend, y = revenue)) +
     geom_smooth(method = "lm", se = FALSE, color="red") +
     labs(title = "Daily Revenue vs Campaign Spend",
          x = "Daily Spend (euros)",
-         y = "Daily Revenue (euros)") +
-    theme_minimal() 
+         y = "Daily Revenue (euros)") 
 ```
 
 @fig-scoter-plot-simple-reg shows the empirical relationship between `spend` and `revenue` in the *marketing* dataset. The scatter plot suggests a positive association, indicating that increased advertising expenditure is generally linked to higher revenue, a pattern consistent with a linear relationship.
@@ -227,8 +226,7 @@ ggplot(marketing, aes(x = spend, y = revenue)) +
     geom_segment(aes(xend = spend, yend = predicted), color = "orange", linetype = "dashed", alpha = 1) +
     labs(title = "Daily Revenue vs Campaign Spend",
          x = "Daily Spend (euros)",
-         y = "Daily Revenue (euros)") +
-    theme_minimal() 
+         y = "Daily Revenue (euros)")
 ```
 
 For example, suppose the 21st day in the dataset has a marketing spend of 25 euros and an actual revenue of `r marketing$revenue[21]`. The residual for this observation is:
@@ -327,9 +325,9 @@ Hypothesis tests tell us *if* a variable is related to the outcome, but they do 
 
 This section introduces two key metrics: the *RSE*, which measures average prediction error, and the $R^2$ (R-squared) statistic, which quantifies how much of the variation in the response variable is explained by the model. Together, they offer a more complete picture of model performance beyond statistical significance.
 
-### Residual Standard Error (RSE) {.unnumbered}
+### Residual Standard Error {.unnumbered}
 
-How far off are our predictions (on average) from the actual values? That is what the *RSE* tells us. It measures the typical size of the residuals: the differences between observed and predicted values, as presented in @fig-residual-simple-reg (orange dashed lines). In other words, RSE estimates the average prediction error of the regression model.
+How far off are our predictions (on average) from the actual values? That is what the Residual Standard Error (RSE) tells us. It measures the typical size of the residuals: the differences between observed and predicted values, as presented in @fig-residual-simple-reg (orange dashed lines). In other words, RSE estimates the average prediction error of the regression model.
 
 The formula for RSE is:
 
@@ -349,7 +347,7 @@ round(rse_value, 2)
 
 This value tells us the typical size of prediction errors, in euros. While lower values are preferred, RSE should always be interpreted in the context of the response variable’s scale. For example, an RSE of 20 may be small or large depending on whether daily revenues typically range in the hundreds or thousands of euros.
 
-### R-squared ($R^2$) {.unnumbered}
+### R-squared {.unnumbered}
 
 If you could explain all the variation in revenue using just one line, how good would that line be? That is the idea behind R-squared ($R^2$), a statistic that measures the proportion of variability in the response variable explained by the model.
 
@@ -521,7 +519,7 @@ Taken together, these results show that model evaluation metrics do more than qu
 
 You might now be wondering: *Should we include all available predictors in our regression model? Or is there an optimal subset that balances simplicity and performance?* These important questions will be addressed in Section [-@sec-ch10-stepwise], where we explore *stepwise regression* and other model selection strategies.
 
-### Same Data, Different Story: What Simpson’s Paradox Can Teach Us {.unnumbered}
+### Simpson’s Paradox {.unnumbered}
 
 As we incorporate more variables into regression models, we must also be alert to how these variables interact. One cautionary tale is Simpson’s Paradox. Suppose a university finds that within every department, female applicants are admitted at higher rates than males. Yet, when all departments are combined, it appears that male applicants are admitted more often. How can this be?
 
@@ -588,7 +586,7 @@ The solution is not to include all available variables, but to build models thou
 
 Ready to build smarter, more reliable models? In the next section, we dive into diagnostic checks that help ensure your regression models stand up to real-world scrutiny.
 
-## Generalized Linear Models (GLMs)
+## Generalized Linear Models
 
 What if your outcome is not continuous but binary (such as predicting whether a customer will churn) or count-based (like the number of daily transactions)? Traditional linear regression is not suited for such cases. It assumes normally distributed errors, constant variance, and a linear relationship between predictors and response. However, these assumptions break down with binary or count data.
 
@@ -765,7 +763,7 @@ This means customers with an international plan are expected to make about 35% m
 
 Poisson regression extends the linear modeling framework to a broader class of problems involving event frequency. It provides an interpretable and statistically grounded method for modeling count data. Similar to logistic regression, it belongs to the family of generalized linear models.
 
-## Choosing the Right Predictors: Stepwise Regression in Action {#sec-ch10-stepwise}
+## Stepwise Regression for Predictor Selection {#sec-ch10-stepwise}
 
 *Which predictors should we include in our regression model, and which should we leave out?* This is one of the most important questions in applied data science. Including too few variables risks overlooking meaningful relationships; including too many can lead to overfitting and diminished generalization performance.
 
@@ -877,7 +875,7 @@ For high-dimensional datasets or situations requiring more robust predictor sele
 
 Thoughtful model specification remains a crucial part of regression analysis. By selecting predictors using principled criteria and validating model performance on representative data, we can construct models that are both interpretable and predictive. While stepwise regression has limitations, it remains a valuable tool (particularly for moderate-sized problems) when used with care and awareness of its assumptions.
 
-## Extending Linear Models to Capture Non-Linear Relationships
+## Modeling Non-Linear Relationships
 
 Imagine trying to predict house prices using the age of a property. A brand-new home might be more expensive than one that is 20 years old, but what about a 100-year-old historic house? In practice, relationships like this are rarely straight lines. Yet standard linear regression assumes exactly that: a constant rate of change between predictors and the response.
 
@@ -1030,7 +1028,7 @@ When assumptions are violated, alternative modeling strategies may be necessary.
 
 Validating regression models is fundamental to producing reliable, interpretable, and actionable results. By following best practices in model diagnostics and validation, we strengthen the statistical foundation of our analyses and build models that can be trusted for decision-making.
 
-## Case Study: Comparing Classifiers to Predict Customer Churn {#sec-ch10-case-study}
+## Case Study: Customer Churn Prediction Models {#sec-ch10-case-study}
 
 Customer churn, which refers to when a customer discontinues service with a company, is a key challenge in subscription-based industries such as telecommunications, banking, and online platforms. Accurately predicting which customers are at risk of churning supports proactive retention strategies and can significantly reduce revenue loss.
 
@@ -1167,7 +1165,7 @@ We visualize all three ROC curves in a single plot:
 
 ```{r out.width = "90%"}
 ggroc(list(roc_logistic, roc_bayes, roc_knn), size = 0.8) + 
-    theme_minimal() + ggtitle("ROC Curves with AUC for Three Models") +
+    ggtitle("ROC Curves with AUC for Three Models") +
   scale_color_manual(values = 1:3, 
     labels = c(paste("Logistic; AUC=", round(auc(roc_logistic), 3)), 
                 paste("Naive Bayes; AUC=", round(auc(roc_bayes), 3)), 
@@ -1242,9 +1240,9 @@ In the next chapter, we explore decision trees and random forest methods. These 
 
 These exercises reinforce key ideas from the chapter, combining conceptual questions, interpretation of regression outputs, and practical implementation in R. The datasets used are included in the **liver** and **ggplot2** packages.
 
-### Simple and Multiple Linear Regression (House, Insurance, and Cereal Datasets) {.unnumbered}
+### Linear Regression {.unnumbered}
 
-#### Conceptual Understanding {.unnumbered}
+#### Conceptual Questions {.unnumbered}
 
 1.  How does simple linear regression differ from multiple linear regression?
 
@@ -1260,7 +1258,7 @@ These exercises reinforce key ideas from the chapter, combining conceptual quest
 
 7.  How are categorical variables handled in regression models in R?
 
-#### Applications Using the House Dataset {.unnumbered}
+#### Hands-On Practice: Regression with the *house* Dataset {.unnumbered}
 
 ``` r
 data(house, package = "liver")
@@ -1280,7 +1278,7 @@ data(house, package = "liver")
 
 14. Use a Q-Q plot to assess the normality of residuals.
 
-#### Applications Using the Insurance Dataset {.unnumbered}
+#### Hands-On Practice: Regression with the *insurance* Dataset {.unnumbered}
 
 ``` r
 data(insurance, package = "liver")
@@ -1296,7 +1294,7 @@ data(insurance, package = "liver")
 
 19. Use stepwise regression to find a simpler model with comparable performance.
 
-#### Applications Using the Cereal Dataset {.unnumbered}
+#### Hands-On Practice: Regression with the *cereal* Dataset {.unnumbered}
 
 ``` r
 data(cereal, package = "liver")
@@ -1312,7 +1310,7 @@ data(cereal, package = "liver")
 
 24. Use stepwise regression to identify a more parsimonious model.
 
-### Applications Using the Diamonds Dataset {.unnumbered}
+#### Hands-On Practice: Regression with the *diamonds* Dataset {.unnumbered}
 
 These exercises use the *diamonds* dataset from the **ggplot2** package. Recall that this dataset contains over 50,000 records of diamond characteristics and their prices. Use the dataset after appropriate cleaning and transformation, as discussed in Chapter [-@sec-ch3-data-preparation].
 
@@ -1338,9 +1336,9 @@ data(diamonds)
 
 32. Challenge: Explore whether the effect of `carat` on `price` differs by `cut`. Add an interaction term between `carat` and `cut` to your model. Interpret the interaction and discuss whether it adds value to the model.
 
-### Polynomial Regression (House Dataset) {.unnumbered}
+### Polynomial Regression {.unnumbered}
 
-#### Conceptual Understanding {.unnumbered}
+#### Conceptual Questions {.unnumbered}
 
 33. What is polynomial regression, and how does it extend linear regression?
 
@@ -1352,7 +1350,7 @@ data(diamonds)
 
 37. What visual or statistical tools can help detect overfitting?
 
-#### Applications Using the House Dataset {.unnumbered}
+#### Hands-On Practice: Polynomial Regression with *house* Dataset {.unnumbered}
 
 38. Fit a quadratic model for `unit.price` using `house.age`. Compare it to a linear model.
 
@@ -1364,9 +1362,9 @@ data(diamonds)
 
 42. Interpret the coefficients of the quadratic model.
 
-### Logistic Regression (Bank Dataset) {.unnumbered}
+### Logistic Regression {.unnumbered}
 
-#### Conceptual Understanding {.unnumbered}
+#### Conceptual Questions {.unnumbered}
 
 43. What distinguishes logistic regression from linear regression?
 
@@ -1378,7 +1376,7 @@ data(diamonds)
 
 47. Distinguish between precision and recall in classification evaluation.
 
-#### Applications Using the Bank Dataset {.unnumbered}
+#### Hands-On Practice: Logistic Regression with *bank* Dataset {.unnumbered}
 
 ``` r
 data(bank, package = "liver")
@@ -1398,7 +1396,7 @@ data(bank, package = "liver")
 
 54. Plot the ROC curve and compute the AUC.
 
-### Stepwise Regression (House Dataset) {.unnumbered}
+#### Hands-On Practice: Stepwise Regression with *house* Dataset {.unnumbered}
 
 55. Use stepwise regression to model `unit.price`.
 
