--- a/11-Tree-based-models.qmd
+++ b/11-Tree-based-models.qmd
@@ -189,7 +189,7 @@ Despite these strengths, C5.0 is not without limitations. The trees it produces 
 
 In summary, C5.0 builds on the strengths of earlier decision tree models by combining entropy-based splitting with flexible tree structures. Its capacity to adapt to diverse data types while maintaining interpretability makes it a valuable tool for a wide range of classification problems. In the next section, we shift focus to *random forests*, an ensemble technique that aggregates many decision trees to further improve predictive performance.
 
-## Random Forests: Boosting Accuracy with an Ensemble of Trees
+## Random Forests
 
 What if you could take a room full of decision trees, each trained slightly differently, and let them vote on the best prediction? This is the idea behind *random forests*, one of the most popular and effective ensemble methods in modern machine learning.
 
@@ -649,7 +649,7 @@ You are encouraged to engage with the exercises provided at the end of the chapt
 
 Ready to put theory into practice? The exercises below invite you to test your understanding of Decision Trees and Random Forests through conceptual questions and hands-on modeling with real datasets.
 
-### Conceptual Understanding {.unnumbered}
+### Conceptual Questions {.unnumbered}
 
 1.  Explain the basic structure of a Decision Tree and how it makes predictions.
 
@@ -691,7 +691,7 @@ In the case study of the previous chapter (Section [-@sec-ch10-case-study]), we 
 
 The *churn* dataset contains information about customer churn behavior in a telecommunications company. The goal is to predict whether a customer will churn based on various attributes.
 
-#### Data Preparation {.unnumbered}
+#### Data Setup to Model {.unnumbered}
 
 18. Load the *churn* dataset and generate a summary. Identify the target variable and the predictors to be used in the analysis.
 
@@ -741,11 +741,11 @@ The *churn* dataset contains information about customer churn behavior in a tele
 
 38. Evaluate whether the simplified Random Forest model performs comparably to the full model.
 
-### Regression Trees and Random Forests: The redWines Dataset {.unnumbered}
+### Regression Trees and Random Forests {.unnumbered}
 
 We now turn to regression tasks, using the *redWines* dataset from **liver** package to predict wine quality.
 
-### Conceptual Questions: Regression Trees and Random Forests {.unnumbered}
+#### Conceptual Questions {.unnumbered}
 
 39. How does a regression tree differ from a classification tree?
 
@@ -753,11 +753,11 @@ We now turn to regression tasks, using the *redWines* dataset from **liver** pac
 
 41. Why is Random Forest regression often preferred over a single regression tree?
 
-### Hands-On: Regression with the redWines Dataset {.unnumbered}
+#### Hands-On: Regression with the redWines Dataset {.unnumbered}
 
 Now, apply what you have learned to a real-world regression problem.
 
-#### Data Preparation {.unnumbered}
+#### Data Setup to Model {.unnumbered}
 
 Load the *redWines* dataset and partition it into a training set (70%) and a test set (30%).
 
