--- a/12-Neural-networks.qmd
+++ b/12-Neural-networks.qmd
@@ -2,7 +2,7 @@
 source("_common.R")
 ```
 
-# Neural Networks: The Building Blocks of Artificial Intelligence {#sec-ch12-neural-networks}
+# Neural Networks: Foundations of Artificial Intelligence {#sec-ch12-neural-networks}
 
 *Can machines think and learn like humans?* This question has fascinated humanity for centuries, inspiring philosophers, inventors, and storytellers alike. From the mechanical automata of ancient Greece to the artificial beings of science fiction, visions of intelligent machines have long captured our imagination. Early inventors such as Hero of Alexandria designed self-operating devices, while myths like the golem and stories of automatons reflected a persistent desire to animate intelligence. What was once confined to myth and speculation has now materialized as *Artificial Intelligence (AI)*, a transformative force reshaping industries, societies, and daily life.
 
@@ -259,7 +259,7 @@ Choosing an appropriate activation function is crucial for ensuring effective le
 
 -   *Linear activation:* Used in the output layer for regression tasks involving continuous targets.
 
-Both sigmoid and tanh functions can saturate when input values are very large or small, causing gradients to vanish and slowing learning. This issue can be mitigated through preprocessing steps such as normalization or standardization to keep inputs within effective ranges. In modern deep learning, ReLU and its variants are widely used due to their simplicity and effectiveness. However, the optimal choice of activation function often depends on the specific problem and should be evaluated empirically.
+Both sigmoid and tanh functions can saturate when input values are very large or small, causing gradients to vanish and slowing learning. This issue can be mitigated through preprocessing steps such as min-max scaling to keep inputs within effective ranges. In modern deep learning, ReLU and its variants are widely used due to their simplicity and effectiveness. However, the optimal choice of activation function often depends on the specific problem and should be evaluated empirically.
 
 In the following section, we turn to the architecture of neural networks and examine how layers, neurons, and connections are structured to build models capable of learning from complex data.
 
