--- a/13-Clustering.qmd
+++ b/13-Clustering.qmd
@@ -337,14 +337,14 @@ selected_variables <- colnames(cereal)[-c(1, 2, 16)]
 cereal_subset <- cereal[, selected_variables]
 ```
 
-Because the numerical features span different scales (e.g., milligrams of sodium vs. grams of fiber), we apply min-max normalization using the `minmax()` function from the **liver** package:
+Because the numerical features span different scales (e.g., milligrams of sodium vs. grams of fiber), we apply min-max scaling using the `minmax()` function from the **liver** package:
 
 ```{r}
 cereal_mm <- minmax(cereal_subset, col = "all")
 str(cereal_mm)
 ```
 
-To visualize the effect of normalization, we compare the distribution of the `sodium` variable before and after scaling:
+To visualize the effect of min-max scaling, we compare the distribution of the `sodium` variable before and after scaling:
 
 ```{r}
 #| layout-ncol: 2
@@ -353,14 +353,13 @@ To visualize the effect of normalization, we compare the distribution of the `so
 
 ggplot(data = cereal) +
     geom_histogram(aes(x = sodium), color = "blue", fill = "lightblue") +
-    theme_minimal() + ggtitle("Before min-max normalization")
+    ggtitle("Before min-max scaling")
 
 ggplot(data = cereal_mm) +
     geom_histogram(aes(x = sodium), color = "blue", fill = "lightblue") + 
-    theme_minimal() + ggtitle("After min-max normalization")
+    ggtitle("After min-max scaling")
 ```
-
-As shown in the histograms, normalization rescales all features to the $[0, 1]$ range. This prevents variables like sodium or potassium (originally measured in large units) from overpowering the clustering process.
+As shown in the histograms, the sodium feature is rescaled to the $[0, 1]$ range. This prevents variables like sodium or potassium (originally measured in large units) from overpowering the clustering process.
 
 With the dataset cleaned, imputed, and normalized, we are now ready to explore how cereals naturally group together. But first, how many clusters should we use?
 
