--- a/2-Intro-data-science.qmd
+++ b/2-Intro-data-science.qmd
@@ -217,7 +217,7 @@ Several key tasks are typically involved:
 
 -   *Feature selection* focuses on identifying the most informative predictors while removing irrelevant or redundant ones. This helps reduce overfitting, enhance interpretability, and improve computational efficiency.
 
--   *Rescaling* ensures that variables are on comparable scales. Methods such as normalization or standardization are especially important for algorithms that rely on distances or gradients, including k-nearest neighbors and support vector machines.
+-   *Rescaling* ensures that variables are on comparable scales. Methods such as Z-score scaling or min-max scaling are especially important for algorithms that rely on distances or gradients, including k-nearest neighbors and support vector machines.
 
 -   *Data splitting* partitions the dataset into training, validation, and test sets. The training set is used to fit the model, the validation set supports tuning hyperparameters, and the test set provides an unbiased evaluation of model performance on unseen data.
 
@@ -275,7 +275,7 @@ In addition to production settings, deployment may take simpler forms, such as p
 
 While deployment is an essential component of the data science lifecycle, it is not the primary focus of this book. Our emphasis is on machine learning in practice, how to build, evaluate, and interpret models that learn from data. The next section introduces machine learning as a core engine of intelligent systems and lays the foundation for the modeling techniques explored in the remainder of this book.
 
-## Machine Learning: The Engine of Intelligent Systems {#sec-ch2-machine-learning}
+## Introduction to Machine Learning {#sec-ch2-machine-learning}
 
 Machine learning is among the most dynamic and transformative areas of data science. It allows systems to identify patterns and make predictions from data, without relying on manually defined rules for every scenario. As data becomes increasingly abundant, machine learning offers scalable methods for turning information into actionable insights.
 
@@ -326,9 +326,9 @@ column_spec(4, width = "12em")
 
 In this book, we focus primarily on supervised and unsupervised learning, as they are most relevant for practical problems involving structured, tabular data. In the subsections that follow, we explore each of the three main branches of machine learning, beginning with supervised learning, the most widely used and foundational approach.
 
-### Supervised Learning: Learning from Labeled Data {.unnumbered}
+### Supervised Learning {.unnumbered}
 
-Consider the task of detecting fraudulent credit card transactions. Historical data contains records labeled as either “fraud” or “legitimate,” and the goal is to build a model that learns from these examples to predict whether a future transaction is likely to be fraudulent. This setup characterizes *supervised learning*.
+Supervised learning refers to situations where models are trained on *labeled data*—datasets that include both input variables and known outcomes. Consider the task of detecting fraudulent credit card transactions. Historical data contains records labeled as either “fraud” or “legitimate,” and the goal is to build a model that learns from these examples to predict whether a future transaction is likely to be fraudulent. This setup characterizes supervised learning.
 
 Supervised learning is the most widely used approach in machine learning. It involves training a model on a dataset where each observation consists of input variables (features) and a corresponding known outcome (label). The model learns a relationship between the inputs, typically denoted as $X$, and the output $Y$, with the aim of making accurate predictions on new, unseen data. This learning process is summarized in Figure [-@fig-supervised-learning].
 
@@ -341,9 +341,9 @@ Supervised learning problems fall into two major categories. In *classification*
 
 This learning paradigm powers many systems we interact with daily, from recommendation engines to credit scoring tools and automated medical diagnostics. In this book, we introduce a range of supervised learning techniques, including k-Nearest Neighbors (Chapter [-@sec-ch7-classification-knn]), Naïve Bayes classifiers (Chapter [-@sec-ch9-bayes]), decision trees and random forests (Chapter [-@sec-ch11-tree-models]), and regression models (Chapter [-@sec-ch10-regression]). Later chapters provide hands-on examples demonstrating how to implement these models, assess their accuracy, and interpret their results in real-world applications.
 
-### Unsupervised Learning: Discovering Structure Without Labels {.unnumbered}
+### Unsupervised Learning {.unnumbered}
 
-How can we make sense of data when no outcomes are specified? This is the central aim of *unsupervised learning*: analyzing datasets without predefined labels to uncover hidden patterns, natural groupings, or internal structure. In contrast to supervised learning, which relies on known outputs to guide learning, unsupervised learning is fundamentally *exploratory*. Its goal is to reveal how the data is organized, often without a specific target in mind.
+How can we make sense of data when no outcomes are specified? This is the central aim of unsupervised learning: analyzing datasets without predefined labels to uncover hidden patterns, natural groupings, or internal structure. In contrast to supervised learning, which relies on known outputs to guide learning, unsupervised learning is primarily *exploratory*, aiming to reveal how the data is organized without a specific target in mind.
 
 Among unsupervised techniques, *clustering* is one of the most widely used and practically valuable. It groups similar observations based on shared characteristics, offering insight where no labels exist. Consider an online retailer seeking to better understand its customers. By clustering data on purchase histories and browsing behavior, the marketing team identifies three distinct segments: budget-conscious deal seekers, loyal repeat customers, and infrequent high-value buyers. This insight enables them to design targeted strategies, such as offering discounts to price-sensitive shoppers, loyalty rewards for repeat buyers, and personalized recommendations for premium customers, thereby increasing engagement and optimizing campaign effectiveness.
 
@@ -351,9 +351,9 @@ Clustering enables data-driven decision-making by revealing structure that may n
 
 We return to clustering in Chapter [-@sec-ch13-clustering], where we examine how it can guide segmentation, anomaly detection, and pattern discovery using real-world examples.
 
-### Reinforcement Learning: Learning Through Interaction {.unnumbered}
+### Reinforcement Learning {.unnumbered}
 
-Reinforcement learning is a distinct branch of machine learning that focuses on training agents to make a sequence of decisions by interacting with an environment. In contrast to supervised learning, which relies on labeled datasets, and unsupervised learning, which seeks patterns in unlabeled data, reinforcement learning is driven by experience. The agent receives feedback, typically in the form of numerical rewards or penalties, based on its actions, and uses this feedback to improve its behavior over time.
+How can an agent learn to make better decisions through trial and error? This is the central question of reinforcement learning, a branch of machine learning where an agent interacts with an environment, receives feedback in the form of rewards or penalties, and uses this feedback to improve its behavior over time. Unlike supervised learning, which depends on labeled datasets, and unsupervised learning, which seeks patterns in unlabeled data, reinforcement learning is driven by experience and feedback from actions.
 
 A central goal of reinforcement learning is to learn an optimal policy: a strategy that selects actions in each state to maximize the expected cumulative reward. This framework is especially effective in environments where decisions are interdependent and the consequences of actions may only become apparent after a delay.
 
