--- a/4-Exploratory-data-analysis.qmd
+++ b/4-Exploratory-data-analysis.qmd
@@ -6,7 +6,7 @@ source("_common.R")
 
 Exploratory Data Analysis (EDA) is the essential first step before building models or conducting statistical inference. It involves examining data carefully, thoroughly, and creatively to uncover insights. EDA helps reveal unexpected patterns, spot anomalies, and highlight relationships that shape the direction of further analysis.
 
-EDA plays a pivotal role in the Data Science Workflow (see @fig-ch2_DSW), functioning as the bridge between Data Preparation (Chapter [-@sec-ch3-data-preparation]) and  (Chapter [-@sec-ch6-setup-data]). This phase deepens our understanding of the data’s structure, quality, and potential, ensuring that downstream decisions rest on a solid foundation.
+EDA plays a pivotal role in the Data Science Workflow (see @fig-ch2_DSW), functioning as the bridge between Data Preparation (Chapter [-@sec-ch3-data-preparation]) and (Chapter [-@sec-ch6-setup-data]). This phase deepens our understanding of the data’s structure, quality, and potential, ensuring that downstream decisions rest on a solid foundation.
 
 Unlike formal hypothesis testing, EDA is not rigid or sequential. It is an iterative, open-ended process that invites curiosity. Different datasets pose different questions. Some exploratory paths reveal meaningful trends, while others point to data issues or dead ends. Through iterative exploration, analysts develop intuition and refine their focus, ultimately identifying the most informative features for modeling.
 
@@ -26,7 +26,7 @@ Following these conceptual foundations, we walk you through a guided EDA of the 
 
 The chapter concludes with hands-on exercises and a guided project using the *bank* dataset. This project offers further opportunities to practice EDA techniques and lays the foundation for the neural network case study presented in Chapter [-@sec-ch12-neural-networks].
 
-## Key Objectives and Guiding Questions for EDA {#sec-EDA-objectives-questions}
+## Objectives and Guiding Questions for EDA {#sec-EDA-objectives-questions}
 
 EDA marks the first substantive interaction between analyst and dataset, the moment when raw data begins to reveal its structure, surprises, and potential narratives. Rather than rushing into modeling, experienced data scientists pause to ask: *What is in the data? What patterns stand out? What problems need attention?*
 
@@ -210,7 +210,7 @@ EDA provides the foundation for addressing these questions. By identifying relev
 
 In Chapter [-@sec-ch7-classification-knn], we will develop a k-nearest neighbors (kNN) model to predict customer churn. Before building that model, however, it is essential to understand the structure of the data, the types of variables available, and the relationships they reveal.
 
-### Getting to Know the Data {.unnumbered}
+### Overview of the *churn* Dataset {.unnumbered}
 
 Before diving into visualizations and summary statistics, it is important to understand the dataset we will explore throughout this chapter. The *churn* dataset, included in the **liver** package, provides a realistic example for practicing EDA. It includes 5,000 customer records across 20 variables, combining demographic information, service usage, account attributes, and customer support interactions.
 
@@ -255,7 +255,7 @@ One observation worth highlighting: although there are `r length(table(churn$sta
 
 In the next sections, we begin our exploratory analysis, starting with the categorical variables. By examining how these variables relate to churn outcomes, we lay the groundwork for uncovering the patterns and insights that EDA is designed to reveal.
 
-## Examining Categorical Features and Churn Patterns {#sec-chapter-EDA-categorical}
+## Exploring Categorical Features {#sec-chapter-EDA-categorical}
 
 Categorical variables represent discrete groupings, such as labels, names, or binary flags, that encode structural information about customers and their interactions with a service. In the *churn* dataset, several such features stand out: `state`, `area.code`, `voice.plan`, and `intl.plan`. Analyzing their distributions, and how they relate to the outcome variable `churn`, can reveal early indicators of customer dissatisfaction or loyalty.
 
@@ -263,8 +263,8 @@ To begin, we examine the distribution of the target variable `churn`, which reco
 
 ```{r out.width = "50%"}
 ggplot(data = churn, aes(x = churn, label = scales::percent(prop.table(stat(count))))) +
-  geom_bar(fill = c("violetred1", "lightgreen")) + 
-  geom_text(stat = 'count', vjust = 0.4, size = 10)
+  geom_bar(fill = c("palevioletred1", "darkseagreen1")) + 
+  geom_text(stat = 'count', vjust = 0.4, size = 8)
 ```
 
 The bar plot reveals a clear class imbalance: the majority of customers remain active (`churn = "no"`), while a smaller proportion have left the service (`churn = "yes"`). Approximately `r round(prop.table(table(churn$churn))["yes"] * 100, 1)`% of customers have churned.
@@ -282,7 +282,7 @@ Class imbalance is more than a descriptive statistic; it can distort predictive 
 
 With this context in place, consider the next question: Are some service features more closely associated with churn than others? To explore this, we begin with the international calling plan.
 
-### Relationship Between Churn and Subscription Plans {.unnumbered}
+### Relationship Between Subscription Plans and Churn {.unnumbered}
 
 Among the features available in the *churn* dataset, the variable `intl.plan` is especially relevant from a business and customer experience standpoint. It indicates whether a customer subscribes to an international calling plan, an option that may reflect unique communication needs and cost sensitivities.
 
@@ -317,7 +317,7 @@ Such findings have practical implications. Identifying segments with elevated ch
 
 In the next subsection, we examine whether voice mail subscription shows a similar or contrasting association with churn behavior.
 
-### Relationship Between Churn and Voice Mail Plan {.unnumbered}
+### Relationship Between Voice Mail Plan and Churn {.unnumbered}
 
 We now turn to another service-related feature: the voice mail plan. The variable `voice.plan` indicates whether a customer subscribes to this additional feature. Like the international plan, it may reflect aspects of customer engagement, satisfaction, or perceived value.
 
@@ -359,7 +359,7 @@ The exploratory analysis of categorical variables reveals several early signals 
 
 These findings offer more than surface-level description; they begin to connect customer characteristics to behavioral outcomes. As we move on to numerical variables, we continue this investigative process, looking for patterns that deepen our understanding of churn dynamics.
 
-## Examining Numerical Features and Behavioral Trends {#sec-EDA-sec-numeric}
+## Exploring Numerical Features {#sec-EDA-sec-numeric}
 
 Now that we have examined categorical predictors, we shift our focus to numerical features, variables that often capture the subtleties of customer behavior. In the *churn* dataset, these include patterns of service usage and support interactions that may not be obvious at first glance. While summary statistics provide a high-level overview, it is through visual tools (e.g. histograms, box plots, and density plots) that meaningful trends, outliers, and predictive signals begin to emerge. By visualizing these variables, we can uncover behavioral patterns that may help explain why some customers stay and others leave.
 
@@ -556,7 +556,7 @@ Let us begin by jointly analyzing `day.mins` (daytime call duration) and `eve.mi
 ```{r}
 ggplot(data = churn) +
     geom_point(aes(x = eve.mins, y = day.mins, color = churn), size = 0.7, alpha = 0.8) +
-    scale_color_manual(values = c("violetred1", "lightgreen")) +
+    scale_color_manual(values = c("palevioletred1", "darkseagreen1")) +
     geom_abline(intercept = 400, slope = -0.6, color = "blue", size = 1)
 ```
 
@@ -574,8 +574,8 @@ To quantify this finding, we isolate this high-usage group using the `subset()` 
 sub_churn = subset(churn, (day.mins > 400 - 0.6 * eve.mins))
 
 ggplot(data = sub_churn, aes(x = churn, label = scales::percent(prop.table(stat(count))))) +
-    geom_bar(fill = c("violetred1", "lightgreen")) + 
-    geom_text(stat = 'count', vjust = 0.4, size = 10)
+    geom_bar(fill = c("palevioletred1", "darkseagreen1")) + 
+    geom_text(stat = 'count', vjust = 0.4, size = 8)
 ```
 
 The churn rate within this group is approximately `r round(mean(sub_churn$churn == "yes") * 100, 1)`%, compared to an overall churn rate of `r round(mean(churn$churn == "yes") * 100, 1)`%. This difference suggests that intensive usage across multiple periods may be a signal of dissatisfaction, possibly related to billing complexity or service expectations.
@@ -585,9 +585,9 @@ Next, we examine another potential interaction: the relationship between `custom
 ```{r}
 ggplot(data = churn, aes(x = day.mins, y = customer.calls, color = churn)) +
   geom_point(alpha = 0.7) +
-  scale_color_manual(values = c("violetred1", "lightgreen")) + 
+  scale_color_manual(values = c("palevioletred1", "darkseagreen1")) + 
   geom_point(data = data.frame(day.mins = 110, customer.calls = 5.5), colour = "orange", size = 50, shape = 1) + 
-  geom_point(data = data.frame(day.mins = 310, customer.calls = 2.0), colour = "orange", size = 45, shape = 1)
+  geom_point(data = data.frame(day.mins = 310, customer.calls = 2.0), colour = "orange", size = 40, shape = 1)
 ```
 
 This scatter plot highlights an interesting pattern. Customers who contact support frequently but have low usage (orange circle, top-left) tend to churn at higher rates, perhaps reflecting frustration despite limited use of the service. In contrast, customers with both high usage and frequent support contact (orange circle, bottom-right) show more mixed churn outcomes, possibly because they value the service highly even when problems arise.
@@ -596,7 +596,7 @@ Together, these examples illustrate how multivariate analysis can expose interac
 
 In Chapter [-@sec-ch5-statistics], we return to these findings using formal statistical methods to assess their significance and evaluate their role in predictive modeling.
 
-## Insights from Exploratory Data Analysis {#sec-EDA-summary}
+## Insights from EDA on Customer Churn {#sec-EDA-summary}
 
 The exploratory analysis of the *churn* dataset has revealed several behavioral patterns and feature relationships that are relevant to both modeling and business strategy. By systematically examining individual variables and their interactions, we identified predictors of customer attrition and gained a deeper understanding of usage and support dynamics.
 
