--- a/5-Statistics.qmd
+++ b/5-Statistics.qmd
@@ -52,7 +52,7 @@ knitr::include_graphics("images/ch5_inference_pillars.png")
 
 These components build upon one another, starting with estimation, incorporating uncertainty, and culminating in formal testing. Together, they enable *data-driven decision-making* by helping distinguish real signals from statistical noise. The next sections explore each component in turn, starting with point estimation, through concrete examples and applications in R.
 
-## Estimation: Drawing Informed Conclusions from Sample Data
+## Estimation from Samples
 
 Suppose a company is planning its customer retention strategy and wants to know: what proportion of users are likely to churn? Or, how many times does a typical churner contact customer service before leaving? These are not just descriptive questions, they are inferential ones. To answer them reliably, we turn to *estimation*, a fundamental task in statistical inference.
 
@@ -216,15 +216,15 @@ How can you determine whether a new marketing campaign increases conversion rate
 Many learners find it challenging to identify which test suits their specific question, particularly when dealing with different types of variables. To support this decision process, Table @tbl-hypothesis-test summarizes commonly used hypothesis tests, their null hypotheses, and the data types they apply to. This reference is introduced in lectures and included here as a guide throughout the book.
 
 ::: {#tbl-hypothesis-test .table}
-| Test                         | Null Hypothesis ($H_0$) | Applied To                                     |
-|---------------------|------------------|---------------------------------|
-| One-sample t-test            | $\mu = \mu_0$           | Single numerical variable                      |
-| Test for Proportion          | $\pi = \pi_0$           | Single categorical variable                    |
-| Two-sample t-test            | $\mu_1 = \mu_2$         | Numerical outcome by binary group              |
-| Two-proportion Z-test        | $\pi_1 = \pi_2$         | Two binary categorical variables               |
-| Chi-square Test              | $\pi_1 = \pi_2 = \pi_3$ | Two categorical variables with \> 2 categories |
-| Analysis of Variance (ANOVA) | $\mu_1 = \mu_2 = \mu_3$ | Numerical outcome by multi-level group         |
-| Correlation Test             | $\rho = 0$              | Two numerical variables                        |
+| Test                         | Null Hypothesis ($H_0$)      | Applied To                                     |
+|------------------------------|------------------------------|------------------------------------------------|
+| One-sample t-test            | $H_0: \mu = \mu_0$           | Single numerical variable                      |
+| Test for Proportion          | $H_0: \pi = \pi_0$           | Single categorical variable                    |
+| Two-sample t-test            | $H_0: \mu_1 = \mu_2$         | Numerical outcome by binary group              |
+| Two-proportion Z-test        | $H_0: \pi_1 = \pi_2$         | Two binary categorical variables               |
+| Chi-square Test              | $H_0: \pi_1 = \pi_2 = \pi_3$ | Two categorical variables with \> 2 categories |
+| Analysis of Variance (ANOVA) | $H_0: \mu_1 = \mu_2 = \mu_3$ | Numerical outcome by multi-level group         |
+| Correlation Test             | $H_0: \rho = 0$              | Two numerical variables                        |
 
 Common hypothesis tests, their null hypotheses, and the types of variables they apply to.
 :::
