--- a/7-Classification-kNN.qmd
+++ b/7-Classification-kNN.qmd
@@ -90,7 +90,7 @@ Another crucial consideration is the choice of *k*, which directly affects model
 
 Finally, the effectiveness of kNN often hinges on proper data preprocessing. Feature selection, scaling, and outlier handling all play a significant role in ensuring that distance computations reflect meaningful structure in the data, topics we address in the next sections.
 
-## kNN in Action: A Toy Example for Drug Classification
+## A Simple Example of kNN Classification
 
 To further illustrate how kNN operates in practice, consider a simplified classification example involving drug prescriptions. We use a synthetic dataset of 200 patients that records each patient’s *age*, *sodium-to-potassium (Na/K) ratio* in the blood, and the prescribed drug type. Although artificially generated, the dataset mimics patterns commonly found in real clinical data. Details of the data generation process are provided in Section [-@sec-intro-R-exercises]. The dataset is available in the **liver** package under the name `drug`.
 
@@ -126,11 +126,11 @@ p + geom_point(data = test_set, aes(x = age, y = ratio), colour = "orange", size
   geom_point(data = test_set, aes(x = age, y = ratio), colour = "orange", size = 1, shape = 4)
 ```
 
-For Patient 1, who lies deep within a cluster of red-circle points (Drug A), the classification is straightforward. All nearest neighbors belong to Drug A, making the prediction confident and unambiguous.  
+For Patient 1, who lies deep within a cluster of red-circle points (Drug A), the classification is straightforward. All nearest neighbors belong to Drug A, making the prediction confident and unambiguous.
 
-For Patient 2, the outcome depends on the choice of *k*. When $k = 1$, the nearest neighbor is a blue square, so the predicted class is Drug C. With $k = 2$, there is a tie between Drug B and Drug C, leaving no clear majority. At $k = 3$, two of the three nearest neighbors are blue squares, so the prediction is again Drug C.  
+For Patient 2, the outcome depends on the choice of *k*. When $k = 1$, the nearest neighbor is a blue square, so the predicted class is Drug C. With $k = 2$, there is a tie between Drug B and Drug C, leaving no clear majority. At $k = 3$, two of the three nearest neighbors are blue squares, so the prediction is again Drug C.
 
-For Patient 3, the classification is more uncertain. With $k = 1$ or $k = 2$, the patient is equally close to both red and blue points, so voting provides no decisive result. At $k = 3$, the three nearest neighbors each represent a different class, making the prediction entirely ambiguous.  
+For Patient 3, the classification is more uncertain. With $k = 1$ or $k = 2$, the patient is equally close to both red and blue points, so voting provides no decisive result. At $k = 3$, the three nearest neighbors each represent a different class, making the prediction entirely ambiguous.
 
 ```{r}
 #| label: fig-ch7-ex-drug-3
@@ -488,7 +488,7 @@ train_scaled = minmax(train_onehot, col = numeric_vars, min = min_train, max = m
 test_scaled  = minmax(test_onehot,  col = numeric_vars, min = min_train, max = max_train)
 ```
 
-Here, the `sapply()` function is used to compute the column-wise minimum and maximum values across the selected numeric variables in the training set. These values define the scaling range. The `minmax()` function from the **liver** package then applies min-max normalization to both the training and test sets, using the training-set values as reference.
+Here, the `sapply()` function is used to compute the column-wise minimum and maximum values across the selected numeric variables in the training set. These values define the scaling range. The `minmax()` function from the **liver** package then applies min-max scaling to both the training and test sets, using the training-set values as reference.
 
 This step ensures that all features are on a comparable scale, preventing those with larger ranges from disproportionately influencing the kNN distance calculations. For a more detailed discussion of scaling methods and best practices, see Section [-@sec-ch3-feature-scaling] and the preparation overview in Section [-@sec-ch7-knn-prep]. Now that the data are properly encoded and scaled, we are ready to choose the optimal number of neighbors (k) for the kNN algorithm.
 
