--- a/8-Model-evaluation.qmd
+++ b/8-Model-evaluation.qmd
@@ -590,7 +590,7 @@ The following exercises reinforce the core concepts of model evaluation introduc
 
 20. Why is it important to evaluate models using multiple metrics instead of relying on a single one?
 
-### Hands-On Practice: Evaluating Models with the *bank* Dataset {.unnumbered}
+### Hands-On Practice: Model Evaluation with the *bank* Dataset {.unnumbered}
 
 For these exercises, we will use the *bank* dataset from the **liver** package. This dataset contains information on customer demographics and financial details, with the target variable *deposit* indicating whether a customer subscribed to a term deposit. It reflects a typical customer decision-making problem, making it ideal for practicing classification evaluation.
 
@@ -606,7 +606,7 @@ data(bank)
 str(bank)
 ```
 
-#### Data Preparation {.unnumbered}
+#### Data Setup to Model {.unnumbered}
 
 21. Load the *bank* dataset and identify the target variable and predictor variables.
 
@@ -620,7 +620,7 @@ str(bank)
 
 26. Apply min-max scaling to numerical variables to ensure fair distance calculations in kNN models.
 
-### Model Training and Evaluation {.unnumbered}
+#### Model Training and Evaluation {.unnumbered}
 
 27. Train a kNN model using the training set and predict *deposit* for the test set.
 
